myapp-istio/templates/v1-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myapp-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
        version: v1
    spec:
      containers:
      - name: myapp
        image: jijeesh/bluegreen:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
