myapp-istio/templates/v2-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myapp-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
        version: v2
    spec:
      containers:
      - name: myapp
        image: jijeesh/bluegreen:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
